<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:text ="@string/title_memorial" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/wedding"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText2"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday1"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText3"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday2"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText4"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday3"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText5"/>
    </LinearLayout>

</LinearLayout>
